# SegmentaModello

Dropbox/Creazione_moduli_tesi/Modulo di segmentazione/: CMakeCache.txt  CMakeLists.txt
Dropbox/Creazione_moduli_tesi/Modulo di segmentazione/include/: mylibforpcl.h
Dropbox/Creazione_moduli_tesi/Modulo di segmentazione/nbproject/: configurations.xml  project.xml
Dropbox/Creazione_moduli_tesi/Modulo di segmentazione/nbproject/private/: Default.properties  configurations.xml  private.xml
Dropbox/Creazione_moduli_tesi/Modulo di segmentazione/src/: mylibforpcl.cpp  region_growing.cpp
Dropbox/Moduli_pronti/ComputeFeature/: CMakeLists.txt  cmake_install.cmake
Dropbox/Moduli_pronti/ComputeFeature/include/: CalcolaFPFHsuPatch.h  VisualizzatorePatch.h
Dropbox/Moduli_pronti/ComputeFeature/src/: CalcolaFPFHsuPatch.cpp  main.cpp
Dropbox/Moduli_pronti/VisualizzatorePatch/: CMakeCache.txt  CMakeLists.txt  CMakeLists_1.txt  Makefile  cmake_install.cmake  compile_commands.json
Dropbox/Moduli_pronti/VisualizzatorePatch/include/: VisualizzatorePatch.h
Dropbox/Moduli_pronti/VisualizzatorePatch/nbproject/: configurations.xml  project.xml
Dropbox/Moduli_pronti/VisualizzatorePatch/nbproject/private/: Default.properties  configurations.xml  private.xml
Dropbox/Moduli_pronti/VisualizzatorePatch/src/: VisualizzatorePatch.cpp  main.cpp
